--- a/components/footer.html
+++ b/components/footer.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/footer.css">
 <footer class="footer_wrapper" id="contact">
     <div class="container">
-        <div class="footer_bottom"><span>Copyright © 2018. <a href="https://webthemez.com/free-bootstrap-templates/"
-                    target="_blank">Bootstrap Templates</a> By WebThemez</span> </div>
+        <div class="footer_bottom"><span>Copyright © 2025. <a href="https://webthemez.com/free-bootstrap-templates/"
+                    target="_blank">Miquel Muñiz Rivas</a> Desarrollador Web</span> </div>
     </div>
 </footer>
