--- a/components/sections/experience.html
+++ b/components/sections/experience.html
@@ -28,7 +28,7 @@
             </div>
           </header>
           <p class="message-content">Es mi trabajo actual. Aun que hay un equipo muy bueno de desarrollo soy el unico
-            que hace la chamaba</p>
+            que hace la chamba</p>
         </div>
       </article>
 
