--- a/components/hero.html
+++ b/components/hero.html
@@ -8,6 +8,7 @@
           Soy desarrollador web con experiencia en el desarrollo de sitios web, aplicaciones móviles y aplicaciones web.
           Soy especializado en desarrollo de sitios web con un enfoque en la usabilidad.
           Soy entusiasta de la vida, la diseño y la innovación.
+          Tengo 20 años de edad
         </p>
         <div class="underline"></div>
         <ul class="social_links">
