--- a/components/sections/curso.html
+++ b/components/sections/curso.html
@@ -3,8 +3,8 @@
 <section id="portfolio" class="content">
     <div class="container">
         <div class="section-title">
-            <h2>Proyectos</h2>
-            <h6>Los proyectos que he realizado</h6>
+            <h2>Cursos</h2>
+            <h6>Cursos que he realizado</h6>
         </div>
 
         <ul class="portfolio-filters">
@@ -14,23 +14,30 @@
         <div class="portfolio-grid">
             <figure class="portfolio-item">
                 <div class="portfolio-img">
-                    <img src="img/porfolio/nava.png" alt="Project 1" />
+                    <img src="img/curso/angular.jpg" alt="Curso 1" />
                 </div>
                 <figcaption>
-                    <h2>Na<span>va</span></h2>
+                    <h2>Angu<span>lar</span></h2>
                 </figcaption>
             </figure>
 
             <figure class="portfolio-item">
                 <div class="portfolio-img">
-                    <img src="img/porfolio/yasabesdonde.jpg" alt="Project 1" />
+                    <img src="img/curso/js.jpg" alt="Project 1" />
                 </div>
                 <figcaption>
-                    <h2>Yasabes<span>Donde</span></h2>
+                    <h2>J<span>S</span></h2>
                 </figcaption>
             </figure>
 
-            
+            <figure class="portfolio-item">
+                <div class="portfolio-img">
+                    <img src="img/curso/golang.jpg" alt="Project 1" />
+                </div>
+                <figcaption>
+                    <h2>G<span>o</span></h2>
+                </figcaption>
+            </figure>
             <!-- Repite <figure> según necesidad -->
         </div>
     </div>
